--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,8 @@
     "manifest_version": 2,
     "name": "EM Helper",
     "description": "EM Helper",
-    "version": "0.1.5",
+    "short_name": "SPARC & MC Help tool",
+    "version": "0.1.6",
     "content_scripts": [{
         "matches": ["<all_urls>"],
         "js": ["content.js"]
